--- a/app/config/eccube/services.yaml
+++ b/app/config/eccube/services.yaml
@@ -223,3 +223,6 @@ services:
 
     Customize\Doctrine\EventSubscriber\TaxRuleEventSubscriber:
         decorates: Eccube\Doctrine\EventSubscriber\TaxRuleEventSubscriber
+
+    Customize\Service\MailService:
+        decorates: Eccube\Service\MailService
